implement get_name_info view

--- a/templates/name_info/index.html
+++ b/templates/name_info/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <form method="post">
-{#    {% csrf_token %}#}
+    {% csrf_token %}
     <label for="id_name">Enter your firstname:</label>
-{#    <input type="text" name="name" id="id_name">#}
+    <input type="text" name="name" id="id_name">
     <br>
     <input type="submit">
 </form>
